syntax = "proto3";

package user;

option go_package = "user-service/proto/pb";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
}

message UserResponse {
  string email = 1;
  string name = 2;
}
